LP: #1763218 LP: #1763217  - Fix wrapping issues with notifications on the subnet details page

--- a/src/maasserver/static/scss/_maas.scss
+++ b/src/maasserver/static/scss/_maas.scss
@@ -268,4 +268,8 @@
   .u-no-wrap {
     white-space: nowrap;
   }
+
+  .u-wrap {
+    white-space: normal;
+  }
 }
